# ManagerHasel

./: CMakeLists.txt  Header.h  ManagerHasel.sln  ManagerHasel.vcxproj  ManagerHasel.vcxproj.filters  configure_solution.bat  main.cpp  menu.cpp  test.txt  test2.txt  test3.txt  test4.txt
password_manager/: CMakeLists.txt  main.cpp
password_manager/include/PasswordManager/: PasswordManager.h
password_manager/src/: PasswordManager.cpp
